# app/Http/Controllers/ProjectController.php
@@ -3,8 +3,10 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\StoreProjectRequest;
+use App\Jobs\SyncRepositoryJob;
 use App\Models\Project;
 use App\Models\Repository;
+use App\Services\Github\GithubService;
 use DB;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -22,10 +24,7 @@ class ProjectController extends Controller
             ['bearerAuth' => []]
         ],
         responses: [
-            new OA\Response(
-                response: 200,
-                description: 'List of projects'
-            ),
+            new OA\Response(response: 200,description: 'List of projects'),
         ]
     )]
     public function index(Request $request): JsonResponse
@@ -42,14 +41,11 @@ class ProjectController extends Controller
         ]);
     }
 
-
     #[OA\Post(
         path: '/api/projects',
         summary: 'Create a project',
         tags: ['Projects'],
-        security: [
-            ['bearerAuth' => []]
-        ],
+        security: [['bearerAuth' => []]],
         requestBody: new OA\RequestBody(
             required: true,
             content: new OA\JsonContent(
@@ -57,27 +53,14 @@ class ProjectController extends Controller
                     'name' => 'My Project',
                     'description' => 'My project description',
                     'repositories' => [
-                        [
-                            'github_repo_id' => '123456789',
-                            'name' => 'my-project',
-                            'owner' => 'john',
-                            'github_url' => 'https://github.com/john/my-project',
-                            'github_created_at' => '2026-08-20T10:00:00Z',
-                            'github_updated_at' => '2026-08-23T15:30:00Z',
-                        ]
-                    ]
+                        ['github_repo_id' => 123456789],
+                    ],
                 ]
             )
         ),
         responses: [
-            new OA\Response(
-                response: 201,
-                description: 'Project created successfully'
-            ),
-            new OA\Response(
-                response: 422,
-                description: 'Validation error or GitHub account not connected'
-            ),
+            new OA\Response(response: 201, description: 'Project created successfully'),
+            new OA\Response(response: 422, description: 'Validation error or GitHub account not connected'),
         ]
     )]
     public function store(StoreProjectRequest $request): JsonResponse
@@ -90,31 +73,35 @@ class ProjectController extends Controller
                 'message' => 'No GitHub account connected.',
             ], 422);
         }
+        $github = new GithubService($user->githubConnection);
+        $githubRepoIds = collect($validated['repositories'])
+            ->pluck('github_repo_id')
+            ->all();
 
-        $project = DB::transaction(function () use ($validated, $user) {
+        $repoDetails = $github->getRepositoriesByIds($githubRepoIds);
+        $project = DB::transaction(function () use ($validated, $repoDetails, $github, $user) {
             $project = Project::create([
                 'company_id' => $user->company_id,
                 'name' => $validated['name'],
                 'slug' => Str::slug($validated['name']) . '-' . Str::random(6),
                 'description' => $validated['description'] ?? null,
             ]);
-
             $project->users()->attach($user->id);
+            foreach ($repoDetails as $repo) {
+                $formatted = $github->formatRepository($repo);
 
-            foreach ($validated['repositories'] as $repo) {
                 $repository = Repository::create([
                     'project_id' => $project->id,
-                    'github_repo_id' => $repo['github_repo_id'],
-                    'name' => $repo['name'],
-                    'owner' => $repo['owner'],
-                    'github_url' => $repo['github_url'],
-                    'github_created_at' => $repo['github_created_at'] ?? null,
-                    'github_updated_at' => $repo['github_updated_at'] ?? null,
+                    'github_repo_id' => $formatted['github_repo_id'],
+                    'name' => $formatted['name'],
+                    'owner' => $formatted['owner'],
+                    'github_url' => $formatted['github_url'],
+                    'github_created_at' => $formatted['github_created_at'],
+                    'github_updated_at' => $formatted['github_updated_at'],
                 ]);
 
-                //to do:create jobs for synchronization
+                SyncRepositoryJob::dispatch($repository, $user);
             }
-
             return $project;
         });
 
@@ -123,4 +110,5 @@ class ProjectController extends Controller
             'project' => $project->load('repositories'),
         ], 201);
     }
+
 }
